--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     </header>
 
     <!-- aside filter section start  -->
-    <section class="container-fluid container-xxl px-lg-4 py-5">
+    <section class="container-fluid container-xxl px-lg-4 pb-5" style="margin-top: -50px;">
       <div class="row">
-        <aside class="col-md-4 col-lg-3">
+        <aside class="col-md-4 col-lg-3 mt-0">
           <section class="mb-3" id="search">
             <div class="header p-3">Search</div>
             <div class="body p-3">
